SCR #613592 - fix: edit grid gap of promo bonuses list

--- a/src/modules/bonuses/components/bonuses-list/styles/themes/_promo.scss
+++ b/src/modules/bonuses/components/bonuses-list/styles/themes/_promo.scss
@@ -4,8 +4,7 @@
         @include bm.get-mq-map('--wlc-bl-promo-grid-columns', $themePromo, 'listColumns');
 
         .wlc-bonuses-list__list {
-            @include bm.get-mq-map('grid-gap', $themePromo, 'gridGap');
-
+            @include bm.get-mq-map('gap', $themePromo, 'gap');
             display: grid;
             grid-template-columns: var(--wlc-bl-promo-grid-columns, 1fr);
             justify-items: center;
